--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install yaml2json
         run: python3 -m pip install remarshal
-      - name: Install distutils for Python 3.12
-        run: apt-get update && apt-get install -y python3-distutils
+      - name: Install distutils/setuptools for Python 3.12
+        run: python3 -m pip install setuptools
       - id: set-matrix
         name: Fetch Build Matrix
         run: |
